--- a/src/templates/represent.html
+++ b/src/templates/represent.html
@@ -47,15 +47,93 @@
         </div>
       </div>
       <div class="col s12 m6">
+       <div class="card-panel grey lighten-4 small">
+           <div class="card-image">
+             <span class="card-title" style="font-weight:bold;font-size:24px;">GIRLS REP</span><br><br>
+             <img class="circle responsive-img" src="/media/{{grep.prof_pic}}" style="width:160px;height:160px;"></img>
+           </div>
+           <div class="card-content">
+           <br><p style="font-size:18px;">{{grep.name}}</p>
+           <p>{{grep.phone_number}}</p>
+           <p><a href="mailto:{{grep.email}}">{{grep.email}}</a></p>
+           </div>
+       </div>
+     </div>
+      <div class="col s12 m6">
         <div class="card-panel grey lighten-4 small">
             <div class="card-image">
-              <span class="card-title" style="font-weight:bold;font-size:24px;">SECRETARY</span><br><br>
+              <span class="card-title" style="font-weight:bold;font-size:24px;">GENERAL SECRETARY</span><br><br>
               <img class="circle responsive-img" src="/media/{{sec.prof_pic}}" style="width:160px;height:160px;"></img>
             </div>
             <div class="card-content">
             <br><p style="font-size:18px;">{{sec.name}}</p>
             <p>{{sec.phone_number}}</p>
             <p><a href="mailto:{{sec.email}}">{{sec.email}}</a></p>
+            </div>
+        </div>
+      </div>
+      <div class="col s12 m6">
+        <div class="card-panel grey lighten-4 small">
+            <div class="card-image">
+              <span class="card-title" style="font-weight:bold;font-size:24px;">JOINT SECRETARY</span><br><br>
+              <img class="circle responsive-img" src="/media/{{sec.prof_pic}}" style="width:160px;height:160px;"></img>
+            </div>
+            <div class="card-content">
+            <br><p style="font-size:18px;">{{sec.name}}</p>
+            <p>{{sec.phone_number}}</p>
+            <p><a href="mailto:{{sec.email}}">{{sec.email}}</a></p>
+            </div>
+        </div>
+      </div>
+      <div class="col s12 m6">
+        <div class="card-panel grey lighten-4 small">
+            <div class="card-image">
+              <span class="card-title" style="font-weight:bold;font-size:24px;">PG REP</span><br><br>
+              <img class="circle responsive-img" src="/media/{{pgrep.prof_pic}}" style="width:160px;height:160px;"></img>
+            </div>
+            <div class="card-content">
+            <br><p style="font-size:18px;">{{pgrep.name}}</p>
+            <p>{{pgrep.phone_number}}</p>
+            <p><a href="mailto:{{pgrep.email}}">{{pgrep.email}}</a></p>
+            </div>
+        </div>
+      </div>
+      <div class="col s12 m6">
+        <div class="card-panel grey lighten-4 small">
+            <div class="card-image">
+              <span class="card-title" style="font-weight:bold;font-size:24px;">PG GIRLS REP</span><br><br>
+              <img class="circle responsive-img" src="/media/{{pgrep.prof_pic}}" style="width:160px;height:160px;"></img>
+            </div>
+            <div class="card-content">
+            <br><p style="font-size:18px;">{{pggrep.name}}</p>
+            <p>{{pggrep.phone_number}}</p>
+            <p><a href="mailto:{{pgrep.email}}">{{pggrep.email}}</a></p>
+            </div>
+        </div>
+      </div>
+      <div class="col s12 m6">
+        <div class="card-panel grey lighten-4 small">
+            <div class="card-image">
+              <span class="card-title" style="font-weight:bold;font-size:24px;">ENGI-TREASURER</span><br><br>
+              <img class="circle responsive-img" src="/media/{{engi.prof_pic}}" style="width:160px;height:160px;"></img>
+            </div>
+            <div class="card-content">
+            <br><p style="font-size:18px;">{{engit.name}}</p>
+            <p>{{engit.phone_number}}</p>
+            <p><a href="mailto:{{engi.email}}">{{engit.email}}</a></p>
+            </div>
+        </div>
+      </div>
+      <div class="col s12 m6">
+        <div class="card-panel grey lighten-4 small">
+            <div class="card-image">
+              <span class="card-title" style="font-weight:bold;font-size:24px;">INCI-TREASURER</span><br><br>
+              <img class="circle responsive-img" src="/media/{{engi.prof_pic}}" style="width:160px;height:160px;"></img>
+            </div>
+            <div class="card-content">
+            <br><p style="font-size:18px;">{{incit.name}}</p>
+            <p>{{incit.phone_number}}</p>
+            <p><a href="mailto:{{engi.email}}">{{incit.email}}</a></p>
             </div>
         </div>
       </div>
@@ -82,32 +160,6 @@
             <br><p style="font-size:18px;">{{inci.name}}</p>
             <p>{{inci.phone_number}}</p>
             <p><a href="mailto:{{inci.email}}">{{inci.email}}</a></p>
-            </div>
-        </div>
-      </div>
-       <div class="col s12 m6">
-        <div class="card-panel grey lighten-4 small">
-            <div class="card-image">
-              <span class="card-title" style="font-weight:bold;font-size:24px;">GIRLS REP</span><br><br>
-              <img class="circle responsive-img" src="/media/{{grep.prof_pic}}" style="width:160px;height:160px;"></img>
-            </div>
-            <div class="card-content">
-            <br><p style="font-size:18px;">{{grep.name}}</p>
-            <p>{{grep.phone_number}}</p>
-            <p><a href="mailto:{{grep.email}}">{{grep.email}}</a></p>
-            </div>
-        </div>
-      </div>
-      <div class="col s12 m6">
-        <div class="card-panel grey lighten-4 small">
-            <div class="card-image">
-              <span class="card-title" style="font-weight:bold;font-size:24px;">PG GIRLS REP</span><br><br>
-              <img class="circle responsive-img" src="/media/{{pgrep.prof_pic}}" style="width:160px;height:160px;"></img>
-            </div>
-            <div class="card-content">
-            <br><p style="font-size:18px;">{{pgrep.name}}</p>
-            <p>{{pgrep.phone_number}}</p>
-            <p><a href="mailto:{{pgrep.email}}">{{pgrep.email}}</a></p>
             </div>
         </div>
       </div>
