--- a/src/templates/article.html
+++ b/src/templates/article.html
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col s12">
             <a href="/" class="breadcrumb">Home</a>
-            <a href="/blog" class="breadcrumb">Blog</a>
+            <a href="/blog" class="breadcrumb">Literary Archive</a>
             <a href="#!" class="breadcrumb">{{article.title}}</a>
         </div>
     </div>
