--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -73,7 +73,7 @@
 			        <div class="col s12">
 			          <div class="card grey lighten-5">
 			            <div class="card-content blue-text text-darken-4">
-			              <span class="card-title">The Beach Side Blues</span>
+			              <span class="card-title">Literary Archive</span>
 			             		<ul class="collection">
 														{% for item in articles %}
 			                      <li class="collection-item"><a href="/blog/{{item.id}}">{{item.title}}</a></li>
