WIP: Smriti - Login and Search implemented

--- a/src/profiles/templates/profiles/edit_profile.html
+++ b/src/profiles/templates/profiles/edit_profile.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base2.html" %}
 
 {% load staticfiles %}
 {% load crispy_forms_tags %}
@@ -19,7 +19,7 @@
         <img title="profile picture" class="img-circle img-responsive" src="{% thumbnail user.profile.picture|default:'default_profile.png' 140x140 crop %}">
       </div>
     </div>
-      
+
     <!-- edit form column -->
     <div class="col-md-9">
       <h3>Personal info</h3>
@@ -38,5 +38,3 @@
   </div>
 </div>
 {% endblock %}
-
-
