--- a/src/profiles/templates/profiles/show_profile.html
+++ b/src/profiles/templates/profiles/show_profile.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base2.html" %}
 
 {% load staticfiles %}
 {% load thumbnail %}
@@ -53,5 +53,3 @@
 </div>
 
 {% endblock %}
-
-
