Meet The Reps Modifications

--- a/src/templates/represent.html
+++ b/src/templates/represent.html
@@ -76,12 +76,12 @@
         <div class="card-panel grey lighten-4 small">
             <div class="card-image">
               <span class="card-title" style="font-weight:bold;font-size:24px;">JOINT SECRETARY</span><br><br>
-              <img class="circle responsive-img" src="/media/{{sec.prof_pic}}" style="width:160px;height:160px;"></img>
+              <img class="circle responsive-img" src="/media/{{jsec.prof_pic}}" style="width:160px;height:160px;"></img>
             </div>
             <div class="card-content">
-            <br><p style="font-size:18px;">{{sec.name}}</p>
-            <p>{{sec.phone_number}}</p>
-            <p><a href="mailto:{{sec.email}}">{{sec.email}}</a></p>
+            <br><p style="font-size:18px;">{{jsec.name}}</p>
+            <p>{{jsec.phone_number}}</p>
+            <p><a href="mailto:{{sec.email}}">{{jsec.email}}</a></p>
             </div>
         </div>
       </div>
@@ -102,38 +102,12 @@
         <div class="card-panel grey lighten-4 small">
             <div class="card-image">
               <span class="card-title" style="font-weight:bold;font-size:24px;">PG GIRLS REP</span><br><br>
-              <img class="circle responsive-img" src="/media/{{pgrep.prof_pic}}" style="width:160px;height:160px;"></img>
+              <img class="circle responsive-img" src="/media/{{pggrep.prof_pic}}" style="width:160px;height:160px;"></img>
             </div>
             <div class="card-content">
             <br><p style="font-size:18px;">{{pggrep.name}}</p>
             <p>{{pggrep.phone_number}}</p>
             <p><a href="mailto:{{pgrep.email}}">{{pggrep.email}}</a></p>
-            </div>
-        </div>
-      </div>
-      <div class="col s12 m6">
-        <div class="card-panel grey lighten-4 small">
-            <div class="card-image">
-              <span class="card-title" style="font-weight:bold;font-size:24px;">ENGI-TREASURER</span><br><br>
-              <img class="circle responsive-img" src="/media/{{engi.prof_pic}}" style="width:160px;height:160px;"></img>
-            </div>
-            <div class="card-content">
-            <br><p style="font-size:18px;">{{engit.name}}</p>
-            <p>{{engit.phone_number}}</p>
-            <p><a href="mailto:{{engi.email}}">{{engit.email}}</a></p>
-            </div>
-        </div>
-      </div>
-      <div class="col s12 m6">
-        <div class="card-panel grey lighten-4 small">
-            <div class="card-image">
-              <span class="card-title" style="font-weight:bold;font-size:24px;">INCI-TREASURER</span><br><br>
-              <img class="circle responsive-img" src="/media/{{engi.prof_pic}}" style="width:160px;height:160px;"></img>
-            </div>
-            <div class="card-content">
-            <br><p style="font-size:18px;">{{incit.name}}</p>
-            <p>{{incit.phone_number}}</p>
-            <p><a href="mailto:{{engi.email}}">{{incit.email}}</a></p>
             </div>
         </div>
       </div>
@@ -163,6 +137,33 @@
             </div>
         </div>
       </div>
+      <div class="col s12 m6">
+        <div class="card-panel grey lighten-4 small">
+            <div class="card-image">
+              <span class="card-title" style="font-weight:bold;font-size:24px;">ENGI-TREASURER</span><br><br>
+              <img class="circle responsive-img" src="/media/{{engit.prof_pic}}" style="width:160px;height:160px;"></img>
+            </div>
+            <div class="card-content">
+            <br><p style="font-size:18px;">{{engit.name}}</p>
+            <p>{{engit.phone_number}}</p>
+            <p><a href="mailto:{{engi.email}}">{{engit.email}}</a></p>
+            </div>
+        </div>
+      </div>
+      <div class="col s12 m6">
+        <div class="card-panel grey lighten-4 small">
+            <div class="card-image">
+              <span class="card-title" style="font-weight:bold;font-size:24px;">INCI-TREASURER</span><br><br>
+              <img class="circle responsive-img" src="/media/{{incit.prof_pic}}" style="width:160px;height:160px;"></img>
+            </div>
+            <div class="card-content">
+            <br><p style="font-size:18px;">{{incit.name}}</p>
+            <p>{{incit.phone_number}}</p>
+            <p><a href="mailto:{{engi.email}}">{{incit.email}}</a></p>
+            </div>
+        </div>
+      </div>
+
      </div>
     </div>
     <h3 class="center-align">CLASS REPESENTATIVES</h3>
