--- a/src/smriti/templates/smriti/home.html
+++ b/src/smriti/templates/smriti/home.html
@@ -1,4 +1,5 @@
 {% extends "smriti/base.html" %}
+{% load django_markdown %}
 
 {% load staticfiles %}
 
@@ -31,7 +32,7 @@
                             <h4>{{item.created_by.get_full_name}}</h4>
                         </div>
                     </div>
-						<p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.  </p>
+						<p> {{item.description|markdown|truncatechars_html:200}}  </p>
 					</div>
 				</div>
 			</a>
