Navigation to letter page set up

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -32,6 +32,8 @@
 		<li><a href="/announce">Announcements</a></li>
 		<li class="divider"></li>
 		<li><a href="/minutes">Minutes of Meetings</a></li>
+		<li class="divider"></li>
+		<li><a href="/letters">Letters To Admin</a></li>
 	</ul>
 	<ul id="dropdown2" class="dropdown-content center-align">
 		<li><a href="/senate">Academic Senate</a></li>
@@ -81,6 +83,8 @@
 								<li><a href="/announce">Announcements</a></li>
 								<li class="divider"></li>
 								<li><a href="/minutes">Minutes of Meetings</a></li>
+								<li class="divider"></li>
+								<li><a href="/letters">Letters To Admin</a></li>
 							</ul>
 						</div>
 					</li>
