--- a/src/templates/letters.html
+++ b/src/templates/letters.html
@@ -5,7 +5,7 @@
 		<div class="col s12">
 			<a href="/" class="breadcrumb">Home</a>
 			<a class="breadcrumb">Student Council</a>
-			<a href="#!" class="breadcrumb">Letters</a>
+			<a href="#!" class="breadcrumb">Letters To Admin</a>
 		</div>
 	</div>
 </div>
