--- a/src/templates/static.html
+++ b/src/templates/static.html
@@ -33,6 +33,8 @@
 		<li><a href="/announce">Announcements</a></li>
 		<li class="divider"></li>
 		<li><a href="/minutes">Minutes of Meetings</a></li>
+		<li class="divider"></li>
+		<li><a href="/letters">Letters to Admin</a></li>
 	</ul>
 	<ul id="dropdown2" class="dropdown-content center-align">
 		<li><a href="/senate">Academic Senate</a></li>
@@ -82,6 +84,8 @@
 								<li><a href="/announce">Announcements</a></li>
 								<li class="divider"></li>
 								<li><a href="/minutes">Minutes of Meetings</a></li>
+								<li class="divider"></li>
+								<li><a href="/letters">Letters to Admin</a></li>
 							</ul>
 						</div>
 					</li>
