--- a/src/smriti/templates/smriti/base.html
+++ b/src/smriti/templates/smriti/base.html
@@ -25,20 +25,20 @@
 	<div class="navbar-fixed">
 		<nav class="black" role="navigation">
 			<div class="nav-wrapper container">
-				<a href="/" class="brand-logo">
+				<a href="/smriti" class="brand-logo">
 					<span class="pad smriti">
 						Smriti 2016
 					</span>
 				</a>
 				<ul class="right hide-on-med-and-down">
-					<li><a href="#">My Testimonials</a></li>
-					<li><a href="#">Write a Testimonial</a></li>
-					<li><a href="#">Browse Testimonials</a></li>
+					<li><a href="/smriti/home">My Testimonials</a></li>
+					<li><a href="/smriti/browse">Browse</a></li>
+					<li><a href="/logout">Logout</a></li>
 				</ul>
 				<ul id="slide-out" class="side-nav collapsible collapsible-accordion">
-					<li class="bold"><a href="#" class="collapsible-header waves-effect waves-teal">My Testimonials</a></li>
-					<li class="bold"><a href="#" class="collapsible-header waves-effect waves-teal">Write a Testimonial</a></li>
-					<li class="bold"><a href="#" class="collapsible-header waves-effect waves-teal">Browse Testimonials</a></li>
+					<li class="bold"><a href="/smriti/home" class="collapsible-header waves-effect waves-teal">My Testimonials</a></li>
+					<li class="bold"><a href="/smriti/browse" class="collapsible-header waves-effect waves-teal">Browse</a></li>
+					<li class="bold"><a href="/logout" class="collapsible-header waves-effect waves-teal">Logout</a></li>
 				</ul>
 				<a href="" id="sidenav" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
 			</div>
