--- a/src/smriti/templates/smriti/testimonial.html
+++ b/src/smriti/templates/smriti/testimonial.html
@@ -1,42 +1,36 @@
 {% extends "smriti/base.html" %}
 
 {% load staticfiles %}
+{% load django_markdown %}
 
 {% block content %}
 <div class="container">
     <section class="container" style="padding-top:15px">
         <div class="row valign-wrapper">
         <div class="col s4">
-            <img class="circle responsive-img" src="{% static 'site/img/presi.jpg' %}">
+            <img class="circle responsive-img" src={% if testimonial.testimonial_to.profile.picture %}"/media/{{testimonial.testimonial_to.profile.picture}}" {% else %}  "/static/site/img/presi.jpg" {% endif %}>
         </div>
         <div class="col s8">
-            <h4>Anirudh Ganesh</h4>
+            <h4>{{testimonial.testimonial_to.profile.user.get_full_name}}</h4>
         </div>
     </section>
     <div class="divider"></div>
     <div class="row" style="padding-top:10px">
 		<div class="col s12 m12 l12">
-				<div class="card grey lighten-3 waves-effect waves-block waves-light valign-wrapper">
+				<div class="card grey lighten-3 waves-block waves-light valign-wrapper">
 					<div class="card-content black-text container">
                         <div class="row valign-wrapper">
                         <div class="col s4">
-                            <img class="circle responsive-img" src="{% static 'site/img/presi.jpg' %}">
+                            <img class="circle responsive-img" src={% if testimonial.created_by.profile.picture %}"/media/{{testimonial.created_by.profile.picture}}" {% else %}  "/static/site/img/presi.jpg" {% endif %}>
                         </div>
                         <div class="col s8">
-                            <h4>Anirudh Ganesh</h4>
+                            <h4>{{testimonial.created_by.profile.user.get_full_name}}</h4>
                         </div>
                         </div>
                     </div>
                     <div class="divider teal"></div>
-                    <div class="flow-text container" style="padding-top:20px">
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
-
-                    <p>Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.</p>
-
-                    <p>Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi.</p>
-
-                    <p>Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,</p>
-                    </div>
+                    <div class="flow-text container" style="padding:20px">
+                        {{testimonial.description|markdown|truncatechars_html:200}}
                     </div>
 				</div>
 		</div>
