User profile pages set up

--- a/src/smriti/templates/smriti/browse.html
+++ b/src/smriti/templates/smriti/browse.html
@@ -30,7 +30,7 @@
      <div class="collapsible-body">
          <div class="collection">
            {% for item in ch %}
-              <a href="/smriti/user/{{item.rollno}}" class="collection-item">{{item.user.get_full_name}}<span class="secondary-content">{{item.rollno}}</span></a>
+              <a href="/smriti/profiles/{{item.rollno}}" class="collection-item">{{item.user.get_full_name}}<span class="secondary-content">{{item.rollno}}</span></a>
            {% endfor %}
       </div>
     </div>
@@ -40,7 +40,7 @@
        <div class="collapsible-body">
            <div class="collection">
              {% for item in co %}
-                <a href="/smriti/user/{{item.rollno}}" class="collection-item">{{item.user.get_full_name}}<span class="secondary-content">{{item.rollno}}</span></a>
+                <a href="/smriti/profiles/{{item.rollno}}" class="collection-item">{{item.user.get_full_name}}<span class="secondary-content">{{item.rollno}}</span></a>
              {% endfor %}
         </div>
       </div>
@@ -50,7 +50,7 @@
        <div class="collapsible-body">
            <div class="collection">
              {% for item in cv %}
-                <a href="/smriti/user/{{item.rollno}}" class="collection-item">{{item.user.get_full_name}}<span class="secondary-content">{{item.rollno}}</span></a>
+                <a href="/smriti/profiles/{{item.rollno}}" class="collection-item">{{item.user.get_full_name}}<span class="secondary-content">{{item.rollno}}</span></a>
              {% endfor %}
         </div>
       </div>
@@ -60,7 +60,7 @@
        <div class="collapsible-body">
            <div class="collection">
              {% for item in ec %}
-                <a href="/smriti/user/{{item.rollno}}" class="collection-item">{{item.user.get_full_name}}<span class="secondary-content">{{item.rollno}}</span></a>
+                <a href="/smriti/profiles/{{item.rollno}}" class="collection-item">{{item.user.get_full_name}}<span class="secondary-content">{{item.rollno}}</span></a>
              {% endfor %}
         </div>
       </div>
@@ -70,7 +70,7 @@
        <div class="collapsible-body">
            <div class="collection">
              {% for item in ee %}
-                <a href="/smriti/user/{{item.rollno}}" class="collection-item">{{item.user.get_full_name}}<span class="secondary-content">{{item.rollno}}</span></a>
+                <a href="/smriti/profiles/{{item.rollno}}" class="collection-item">{{item.user.get_full_name}}<span class="secondary-content">{{item.rollno}}</span></a>
              {% endfor %}
         </div>
       </div>
@@ -80,7 +80,7 @@
        <div class="collapsible-body">
            <div class="collection">
              {% for item in it %}
-                <a href="/smriti/user/{{item.rollno}}" class="collection-item">{{item.user.get_full_name}}<span class="secondary-content">{{item.rollno}}</span></a>
+                <a href="/smriti/profiles/{{item.rollno}}" class="collection-item">{{item.user.get_full_name}}<span class="secondary-content">{{item.rollno}}</span></a>
              {% endfor %}
         </div>
       </div>
@@ -90,7 +90,7 @@
        <div class="collapsible-body">
            <div class="collection">
              {% for item in me %}
-                <a href="/smriti/user/{{item.rollno}}" class="collection-item">{{item.user.get_full_name}}<span class="secondary-content">{{item.rollno}}</span></a>
+                <a href="/smriti/profiles/{{item.rollno}}" class="collection-item">{{item.user.get_full_name}}<span class="secondary-content">{{item.rollno}}</span></a>
              {% endfor %}
         </div>
       </div>
@@ -100,7 +100,7 @@
        <div class="collapsible-body">
            <div class="collection">
              {% for item in mn %}
-                <a href="/smriti/user/{{item.rollno}}" class="collection-item">{{item.user.get_full_name}}<span class="secondary-content">{{item.rollno}}</span></a>
+                <a href="/smriti/profiles/{{item.rollno}}" class="collection-item">{{item.user.get_full_name}}<span class="secondary-content">{{item.rollno}}</span></a>
              {% endfor %}
         </div>
       </div>
@@ -110,7 +110,7 @@
        <div class="collapsible-body">
            <div class="collection">
              {% for item in mt %}
-                <a href="/smriti/user/{{item.rollno}}" class="collection-item">{{item.user.get_full_name}}<span class="secondary-content">{{item.rollno}}</span></a>
+                <a href="/smriti/profiles/{{item.rollno}}" class="collection-item">{{item.user.get_full_name}}<span class="secondary-content">{{item.rollno}}</span></a>
              {% endfor %}
         </div>
       </div>
