--- a/src/smriti/templates/smriti/home.html
+++ b/src/smriti/templates/smriti/home.html
@@ -14,7 +14,7 @@
             <h4>{{profile.user.get_full_name}}</h4>
         </div>
         <div class="col s2">
-            {% if request.user == profile.user%}
+            {% if user != profile.user %}
             <a class="btn-floating btn-large waves-effect waves-light teal lighten-3" href="/smriti/write/{{profile.rollno}}"><i class="material-icons">add</i></a>
             {% else %}
             <a class="btn-floating btn-large waves-effect waves-light teal lighten-3" href="/smriti/edit_profile/"><i class="material-icons">mode_edit</i></a>
